Calico/build/exe.win-amd64-3.8/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DSLASH
    ELSE

Grammar

Rule 0     S' -> calc
Rule 1     calc -> calc NEWLINE calc
Rule 2     call -> NAME tuple
Rule 3     calc -> if
Rule 4     calc -> expression
Rule 5     calc -> var_assign
Rule 6     calc -> data
Rule 7     calc -> empty
Rule 8     calc -> while
Rule 9     calc -> method
Rule 10    calc -> output
Rule 11    calc -> comment
Rule 12    if -> IF RBRAC calc LBRAC RBRAC calc LBRAC elif
Rule 13    var_assign -> NAME EQUALS expression
Rule 14    var_assign -> NAME EQUALS data
Rule 15    if -> IF RBRAC calc LBRAC RBRAC calc LBRAC
Rule 16    expression -> MINUS expression
Rule 17    expression -> expression MULTIPLY expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression MORE expression
Rule 22    expression -> expression LESS expression
Rule 23    expression -> expression MOEQ expression
Rule 24    expression -> expression LEEQ expression
Rule 25    expression -> expression DEQUALS expression
Rule 26    expression -> INT
Rule 27    expression -> FLOAT
Rule 28    expression -> call
Rule 29    expression -> TRUE
Rule 30    expression -> FALSE
Rule 31    expression -> PAL expression PAR
Rule 32    expression -> NAME
Rule 33    data -> data COMMA data
Rule 34    data -> string
Rule 35    data -> INT
Rule 36    data -> FLOAT
Rule 37    data -> tuple
Rule 38    data -> expression
Rule 39    data -> empty
Rule 40    string -> STRING
Rule 41    tuple -> PAL data PAR
Rule 42    while -> WHILE RBRAC expression LBRAC RBRAC calc LBRAC
Rule 43    output -> OUTPUT expression
Rule 44    method -> METHOD NAME tuple RBRAC calc LBRAC
Rule 45    elif -> ELIF RBRAC calc LBRAC RBRAC calc LBRAC
Rule 46    elif -> ELIF RBRAC calc LBRAC RBRAC calc LBRAC elif
Rule 47    empty -> none
Rule 48    empty -> comment
Rule 49    none -> <empty>
Rule 50    comment -> COMMENT

Terminals, with rules where they appear

COMMA                : 33
COMMENT              : 50
DEQUALS              : 25
DIVIDE               : 18
DSLASH               : 
ELIF                 : 45 46
ELSE                 : 
EQUALS               : 13 14
FALSE                : 30
FLOAT                : 27 36
IF                   : 12 15
INT                  : 26 35
LBRAC                : 12 12 15 15 42 42 44 45 45 46 46
LEEQ                 : 24
LESS                 : 22
METHOD               : 44
MINUS                : 16 20
MOEQ                 : 23
MORE                 : 21
MULTIPLY             : 17
NAME                 : 2 13 14 32 44
NEWLINE              : 1
OUTPUT               : 43
PAL                  : 31 41
PAR                  : 31 41
PLUS                 : 19
RBRAC                : 12 12 15 15 42 42 44 45 45 46 46
STRING               : 40
TRUE                 : 29
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

calc                 : 1 1 12 12 15 15 42 44 45 45 46 46 0
call                 : 28
comment              : 11 48
data                 : 6 14 33 33 41
elif                 : 12 46
empty                : 7 39
expression           : 4 13 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 31 38 42 43
if                   : 3
method               : 9
none                 : 47
output               : 10
string               : 34
tuple                : 2 37 44
var_assign           : 5
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . calc NEWLINE calc
    (3) calc -> . if
    (4) calc -> . expression
    (5) calc -> . var_assign
    (6) calc -> . data
    (7) calc -> . empty
    (8) calc -> . while
    (9) calc -> . method
    (10) calc -> . output
    (11) calc -> . comment
    (12) if -> . IF RBRAC calc LBRAC RBRAC calc LBRAC elif
    (15) if -> . IF RBRAC calc LBRAC RBRAC calc LBRAC
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (13) var_assign -> . NAME EQUALS expression
    (14) var_assign -> . NAME EQUALS data
    (33) data -> . data COMMA data
    (34) data -> . string
    (35) data -> . INT
    (36) data -> . FLOAT
    (37) data -> . tuple
    (38) data -> . expression
    (39) data -> . empty
    (47) empty -> . none
    (48) empty -> . comment
    (42) while -> . WHILE RBRAC expression LBRAC RBRAC calc LBRAC
    (44) method -> . METHOD NAME tuple RBRAC calc LBRAC
    (43) output -> . OUTPUT expression
    (50) comment -> . COMMENT
    (2) call -> . NAME tuple
    (40) string -> . STRING
    (41) tuple -> . PAL data PAR
    (49) none -> .

    IF              shift and go to state 11
    MINUS           shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 18
    NAME            shift and go to state 19
    WHILE           shift and go to state 23
    METHOD          shift and go to state 24
    OUTPUT          shift and go to state 25
    COMMENT         shift and go to state 26
    STRING          shift and go to state 27
    NEWLINE         reduce using rule 49 (none -> .)
    $end            reduce using rule 49 (none -> .)
    COMMA           reduce using rule 49 (none -> .)

    calc                           shift and go to state 1
    if                             shift and go to state 2
    expression                     shift and go to state 3
    var_assign                     shift and go to state 4
    data                           shift and go to state 5
    empty                          shift and go to state 6
    while                          shift and go to state 7
    method                         shift and go to state 8
    output                         shift and go to state 9
    comment                        shift and go to state 10
    call                           shift and go to state 15
    string                         shift and go to state 20
    tuple                          shift and go to state 21
    none                           shift and go to state 22

state 1

    (0) S' -> calc .
    (1) calc -> calc . NEWLINE calc

    NEWLINE         shift and go to state 28


state 2

    (3) calc -> if .

    NEWLINE         reduce using rule 3 (calc -> if .)
    $end            reduce using rule 3 (calc -> if .)
    LBRAC           reduce using rule 3 (calc -> if .)


state 3

    (4) calc -> expression .
    (17) expression -> expression . MULTIPLY expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . MORE expression
    (22) expression -> expression . LESS expression
    (23) expression -> expression . MOEQ expression
    (24) expression -> expression . LEEQ expression
    (25) expression -> expression . DEQUALS expression
    (38) data -> expression .

  ! reduce/reduce conflict for NEWLINE resolved using rule 4 (calc -> expression .)
  ! reduce/reduce conflict for $end resolved using rule 4 (calc -> expression .)
  ! reduce/reduce conflict for LBRAC resolved using rule 4 (calc -> expression .)
    NEWLINE         reduce using rule 4 (calc -> expression .)
    $end            reduce using rule 4 (calc -> expression .)
    LBRAC           reduce using rule 4 (calc -> expression .)
    MULTIPLY        shift and go to state 29
    DIVIDE          shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    MORE            shift and go to state 33
    LESS            shift and go to state 34
    MOEQ            shift and go to state 35
    LEEQ            shift and go to state 36
    DEQUALS         shift and go to state 37
    COMMA           reduce using rule 38 (data -> expression .)

  ! NEWLINE         [ reduce using rule 38 (data -> expression .) ]
  ! $end            [ reduce using rule 38 (data -> expression .) ]
  ! LBRAC           [ reduce using rule 38 (data -> expression .) ]


state 4

    (5) calc -> var_assign .

    NEWLINE         reduce using rule 5 (calc -> var_assign .)
    $end            reduce using rule 5 (calc -> var_assign .)
    LBRAC           reduce using rule 5 (calc -> var_assign .)


state 5

    (6) calc -> data .
    (33) data -> data . COMMA data

    NEWLINE         reduce using rule 6 (calc -> data .)
    $end            reduce using rule 6 (calc -> data .)
    LBRAC           reduce using rule 6 (calc -> data .)
    COMMA           shift and go to state 38


state 6

    (7) calc -> empty .
    (39) data -> empty .

  ! reduce/reduce conflict for NEWLINE resolved using rule 7 (calc -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 7 (calc -> empty .)
  ! reduce/reduce conflict for LBRAC resolved using rule 7 (calc -> empty .)
    NEWLINE         reduce using rule 7 (calc -> empty .)
    $end            reduce using rule 7 (calc -> empty .)
    LBRAC           reduce using rule 7 (calc -> empty .)
    COMMA           reduce using rule 39 (data -> empty .)

  ! NEWLINE         [ reduce using rule 39 (data -> empty .) ]
  ! $end            [ reduce using rule 39 (data -> empty .) ]
  ! LBRAC           [ reduce using rule 39 (data -> empty .) ]


state 7

    (8) calc -> while .

    NEWLINE         reduce using rule 8 (calc -> while .)
    $end            reduce using rule 8 (calc -> while .)
    LBRAC           reduce using rule 8 (calc -> while .)


state 8

    (9) calc -> method .

    NEWLINE         reduce using rule 9 (calc -> method .)
    $end            reduce using rule 9 (calc -> method .)
    LBRAC           reduce using rule 9 (calc -> method .)


state 9

    (10) calc -> output .

    NEWLINE         reduce using rule 10 (calc -> output .)
    $end            reduce using rule 10 (calc -> output .)
    LBRAC           reduce using rule 10 (calc -> output .)


state 10

    (11) calc -> comment .
    (48) empty -> comment .

  ! reduce/reduce conflict for NEWLINE resolved using rule 11 (calc -> comment .)
  ! reduce/reduce conflict for $end resolved using rule 11 (calc -> comment .)
  ! reduce/reduce conflict for LBRAC resolved using rule 11 (calc -> comment .)
    NEWLINE         reduce using rule 11 (calc -> comment .)
    $end            reduce using rule 11 (calc -> comment .)
    LBRAC           reduce using rule 11 (calc -> comment .)
    COMMA           reduce using rule 48 (empty -> comment .)

  ! NEWLINE         [ reduce using rule 48 (empty -> comment .) ]
  ! $end            [ reduce using rule 48 (empty -> comment .) ]
  ! LBRAC           [ reduce using rule 48 (empty -> comment .) ]


state 11

    (12) if -> IF . RBRAC calc LBRAC RBRAC calc LBRAC elif
    (15) if -> IF . RBRAC calc LBRAC RBRAC calc LBRAC

    RBRAC           shift and go to state 39


state 12

    (16) expression -> MINUS . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 40
    call                           shift and go to state 15

state 13

    (26) expression -> INT .
    (35) data -> INT .

  ! reduce/reduce conflict for COMMA resolved using rule 26 (expression -> INT .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 26 (expression -> INT .)
  ! reduce/reduce conflict for $end resolved using rule 26 (expression -> INT .)
  ! reduce/reduce conflict for PAR resolved using rule 26 (expression -> INT .)
  ! reduce/reduce conflict for LBRAC resolved using rule 26 (expression -> INT .)
    MULTIPLY        reduce using rule 26 (expression -> INT .)
    DIVIDE          reduce using rule 26 (expression -> INT .)
    PLUS            reduce using rule 26 (expression -> INT .)
    MINUS           reduce using rule 26 (expression -> INT .)
    MORE            reduce using rule 26 (expression -> INT .)
    LESS            reduce using rule 26 (expression -> INT .)
    MOEQ            reduce using rule 26 (expression -> INT .)
    LEEQ            reduce using rule 26 (expression -> INT .)
    DEQUALS         reduce using rule 26 (expression -> INT .)
    NEWLINE         reduce using rule 26 (expression -> INT .)
    $end            reduce using rule 26 (expression -> INT .)
    COMMA           reduce using rule 26 (expression -> INT .)
    PAR             reduce using rule 26 (expression -> INT .)
    LBRAC           reduce using rule 26 (expression -> INT .)

  ! COMMA           [ reduce using rule 35 (data -> INT .) ]
  ! NEWLINE         [ reduce using rule 35 (data -> INT .) ]
  ! $end            [ reduce using rule 35 (data -> INT .) ]
  ! PAR             [ reduce using rule 35 (data -> INT .) ]
  ! LBRAC           [ reduce using rule 35 (data -> INT .) ]


state 14

    (27) expression -> FLOAT .
    (36) data -> FLOAT .

  ! reduce/reduce conflict for COMMA resolved using rule 27 (expression -> FLOAT .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 27 (expression -> FLOAT .)
  ! reduce/reduce conflict for $end resolved using rule 27 (expression -> FLOAT .)
  ! reduce/reduce conflict for PAR resolved using rule 27 (expression -> FLOAT .)
  ! reduce/reduce conflict for LBRAC resolved using rule 27 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 27 (expression -> FLOAT .)
    DIVIDE          reduce using rule 27 (expression -> FLOAT .)
    PLUS            reduce using rule 27 (expression -> FLOAT .)
    MINUS           reduce using rule 27 (expression -> FLOAT .)
    MORE            reduce using rule 27 (expression -> FLOAT .)
    LESS            reduce using rule 27 (expression -> FLOAT .)
    MOEQ            reduce using rule 27 (expression -> FLOAT .)
    LEEQ            reduce using rule 27 (expression -> FLOAT .)
    DEQUALS         reduce using rule 27 (expression -> FLOAT .)
    NEWLINE         reduce using rule 27 (expression -> FLOAT .)
    $end            reduce using rule 27 (expression -> FLOAT .)
    COMMA           reduce using rule 27 (expression -> FLOAT .)
    PAR             reduce using rule 27 (expression -> FLOAT .)
    LBRAC           reduce using rule 27 (expression -> FLOAT .)

  ! COMMA           [ reduce using rule 36 (data -> FLOAT .) ]
  ! NEWLINE         [ reduce using rule 36 (data -> FLOAT .) ]
  ! $end            [ reduce using rule 36 (data -> FLOAT .) ]
  ! PAR             [ reduce using rule 36 (data -> FLOAT .) ]
  ! LBRAC           [ reduce using rule 36 (data -> FLOAT .) ]


state 15

    (28) expression -> call .

    MULTIPLY        reduce using rule 28 (expression -> call .)
    DIVIDE          reduce using rule 28 (expression -> call .)
    PLUS            reduce using rule 28 (expression -> call .)
    MINUS           reduce using rule 28 (expression -> call .)
    MORE            reduce using rule 28 (expression -> call .)
    LESS            reduce using rule 28 (expression -> call .)
    MOEQ            reduce using rule 28 (expression -> call .)
    LEEQ            reduce using rule 28 (expression -> call .)
    DEQUALS         reduce using rule 28 (expression -> call .)
    NEWLINE         reduce using rule 28 (expression -> call .)
    $end            reduce using rule 28 (expression -> call .)
    COMMA           reduce using rule 28 (expression -> call .)
    PAR             reduce using rule 28 (expression -> call .)
    LBRAC           reduce using rule 28 (expression -> call .)


state 16

    (29) expression -> TRUE .

    MULTIPLY        reduce using rule 29 (expression -> TRUE .)
    DIVIDE          reduce using rule 29 (expression -> TRUE .)
    PLUS            reduce using rule 29 (expression -> TRUE .)
    MINUS           reduce using rule 29 (expression -> TRUE .)
    MORE            reduce using rule 29 (expression -> TRUE .)
    LESS            reduce using rule 29 (expression -> TRUE .)
    MOEQ            reduce using rule 29 (expression -> TRUE .)
    LEEQ            reduce using rule 29 (expression -> TRUE .)
    DEQUALS         reduce using rule 29 (expression -> TRUE .)
    NEWLINE         reduce using rule 29 (expression -> TRUE .)
    $end            reduce using rule 29 (expression -> TRUE .)
    COMMA           reduce using rule 29 (expression -> TRUE .)
    PAR             reduce using rule 29 (expression -> TRUE .)
    LBRAC           reduce using rule 29 (expression -> TRUE .)


state 17

    (30) expression -> FALSE .

    MULTIPLY        reduce using rule 30 (expression -> FALSE .)
    DIVIDE          reduce using rule 30 (expression -> FALSE .)
    PLUS            reduce using rule 30 (expression -> FALSE .)
    MINUS           reduce using rule 30 (expression -> FALSE .)
    MORE            reduce using rule 30 (expression -> FALSE .)
    LESS            reduce using rule 30 (expression -> FALSE .)
    MOEQ            reduce using rule 30 (expression -> FALSE .)
    LEEQ            reduce using rule 30 (expression -> FALSE .)
    DEQUALS         reduce using rule 30 (expression -> FALSE .)
    NEWLINE         reduce using rule 30 (expression -> FALSE .)
    $end            reduce using rule 30 (expression -> FALSE .)
    COMMA           reduce using rule 30 (expression -> FALSE .)
    PAR             reduce using rule 30 (expression -> FALSE .)
    LBRAC           reduce using rule 30 (expression -> FALSE .)


state 18

    (31) expression -> PAL . expression PAR
    (41) tuple -> PAL . data PAR
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (33) data -> . data COMMA data
    (34) data -> . string
    (35) data -> . INT
    (36) data -> . FLOAT
    (37) data -> . tuple
    (38) data -> . expression
    (39) data -> . empty
    (2) call -> . NAME tuple
    (40) string -> . STRING
    (41) tuple -> . PAL data PAR
    (47) empty -> . none
    (48) empty -> . comment
    (49) none -> .
    (50) comment -> . COMMENT

    MINUS           shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 18
    NAME            shift and go to state 44
    STRING          shift and go to state 27
    PAR             reduce using rule 49 (none -> .)
    COMMA           reduce using rule 49 (none -> .)
    COMMENT         shift and go to state 26

    expression                     shift and go to state 45
    data                           shift and go to state 46
    call                           shift and go to state 15
    string                         shift and go to state 20
    tuple                          shift and go to state 21
    empty                          shift and go to state 47
    none                           shift and go to state 22
    comment                        shift and go to state 48

state 19

    (32) expression -> NAME .
    (13) var_assign -> NAME . EQUALS expression
    (14) var_assign -> NAME . EQUALS data
    (2) call -> NAME . tuple
    (41) tuple -> . PAL data PAR

    MULTIPLY        reduce using rule 32 (expression -> NAME .)
    DIVIDE          reduce using rule 32 (expression -> NAME .)
    PLUS            reduce using rule 32 (expression -> NAME .)
    MINUS           reduce using rule 32 (expression -> NAME .)
    MORE            reduce using rule 32 (expression -> NAME .)
    LESS            reduce using rule 32 (expression -> NAME .)
    MOEQ            reduce using rule 32 (expression -> NAME .)
    LEEQ            reduce using rule 32 (expression -> NAME .)
    DEQUALS         reduce using rule 32 (expression -> NAME .)
    NEWLINE         reduce using rule 32 (expression -> NAME .)
    $end            reduce using rule 32 (expression -> NAME .)
    COMMA           reduce using rule 32 (expression -> NAME .)
    LBRAC           reduce using rule 32 (expression -> NAME .)
    EQUALS          shift and go to state 49
    PAL             shift and go to state 51

    tuple                          shift and go to state 50

state 20

    (34) data -> string .

    COMMA           reduce using rule 34 (data -> string .)
    NEWLINE         reduce using rule 34 (data -> string .)
    $end            reduce using rule 34 (data -> string .)
    PAR             reduce using rule 34 (data -> string .)
    LBRAC           reduce using rule 34 (data -> string .)


state 21

    (37) data -> tuple .

    COMMA           reduce using rule 37 (data -> tuple .)
    NEWLINE         reduce using rule 37 (data -> tuple .)
    $end            reduce using rule 37 (data -> tuple .)
    PAR             reduce using rule 37 (data -> tuple .)
    LBRAC           reduce using rule 37 (data -> tuple .)


state 22

    (47) empty -> none .

    NEWLINE         reduce using rule 47 (empty -> none .)
    $end            reduce using rule 47 (empty -> none .)
    COMMA           reduce using rule 47 (empty -> none .)
    PAR             reduce using rule 47 (empty -> none .)
    LBRAC           reduce using rule 47 (empty -> none .)


state 23

    (42) while -> WHILE . RBRAC expression LBRAC RBRAC calc LBRAC

    RBRAC           shift and go to state 52


state 24

    (44) method -> METHOD . NAME tuple RBRAC calc LBRAC

    NAME            shift and go to state 53


state 25

    (43) output -> OUTPUT . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 54
    call                           shift and go to state 15

state 26

    (50) comment -> COMMENT .

    NEWLINE         reduce using rule 50 (comment -> COMMENT .)
    $end            reduce using rule 50 (comment -> COMMENT .)
    COMMA           reduce using rule 50 (comment -> COMMENT .)
    PAR             reduce using rule 50 (comment -> COMMENT .)
    LBRAC           reduce using rule 50 (comment -> COMMENT .)


state 27

    (40) string -> STRING .

    COMMA           reduce using rule 40 (string -> STRING .)
    NEWLINE         reduce using rule 40 (string -> STRING .)
    $end            reduce using rule 40 (string -> STRING .)
    PAR             reduce using rule 40 (string -> STRING .)
    LBRAC           reduce using rule 40 (string -> STRING .)


state 28

    (1) calc -> calc NEWLINE . calc
    (1) calc -> . calc NEWLINE calc
    (3) calc -> . if
    (4) calc -> . expression
    (5) calc -> . var_assign
    (6) calc -> . data
    (7) calc -> . empty
    (8) calc -> . while
    (9) calc -> . method
    (10) calc -> . output
    (11) calc -> . comment
    (12) if -> . IF RBRAC calc LBRAC RBRAC calc LBRAC elif
    (15) if -> . IF RBRAC calc LBRAC RBRAC calc LBRAC
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (13) var_assign -> . NAME EQUALS expression
    (14) var_assign -> . NAME EQUALS data
    (33) data -> . data COMMA data
    (34) data -> . string
    (35) data -> . INT
    (36) data -> . FLOAT
    (37) data -> . tuple
    (38) data -> . expression
    (39) data -> . empty
    (47) empty -> . none
    (48) empty -> . comment
    (42) while -> . WHILE RBRAC expression LBRAC RBRAC calc LBRAC
    (44) method -> . METHOD NAME tuple RBRAC calc LBRAC
    (43) output -> . OUTPUT expression
    (50) comment -> . COMMENT
    (2) call -> . NAME tuple
    (40) string -> . STRING
    (41) tuple -> . PAL data PAR
    (49) none -> .

    IF              shift and go to state 11
    MINUS           shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 18
    NAME            shift and go to state 19
    WHILE           shift and go to state 23
    METHOD          shift and go to state 24
    OUTPUT          shift and go to state 25
    COMMENT         shift and go to state 26
    STRING          shift and go to state 27
    NEWLINE         reduce using rule 49 (none -> .)
    $end            reduce using rule 49 (none -> .)
    LBRAC           reduce using rule 49 (none -> .)
    COMMA           reduce using rule 49 (none -> .)

    calc                           shift and go to state 55
    if                             shift and go to state 2
    expression                     shift and go to state 3
    var_assign                     shift and go to state 4
    data                           shift and go to state 5
    empty                          shift and go to state 6
    while                          shift and go to state 7
    method                         shift and go to state 8
    output                         shift and go to state 9
    comment                        shift and go to state 10
    call                           shift and go to state 15
    string                         shift and go to state 20
    tuple                          shift and go to state 21
    none                           shift and go to state 22

state 29

    (17) expression -> expression MULTIPLY . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 56
    call                           shift and go to state 15

state 30

    (18) expression -> expression DIVIDE . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 57
    call                           shift and go to state 15

state 31

    (19) expression -> expression PLUS . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 58
    call                           shift and go to state 15

state 32

    (20) expression -> expression MINUS . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 59
    call                           shift and go to state 15

state 33

    (21) expression -> expression MORE . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 60
    call                           shift and go to state 15

state 34

    (22) expression -> expression LESS . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44

    expression                     shift and go to state 61
    call                           shift and go to state 15

state 35

    (23) expression -> expression MOEQ . expression
    (16) expression -> . MINUS expression
    (17) expression -> . expression MULTIPLY expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MORE expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MOEQ expression
    (24) expression -> . expression LEEQ expression
    (25) expression -> . expression DEQUALS expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . call
    (29) expression -> . TRUE
    (30) expression -> . FALSE
    (31) expression -> . PAL expression PAR
    (32) expression -> . NAME
    (2) call -> . NAME tuple

    MINUS           shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    PAL             shift and go to state 43
    NAME            shift and go to state 44
